# Prizm

./: .gitignore  pubspec.yaml
android/: CMakeLists.txt
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/oneidlab/prizm/: MainActivity.java
android/app/src/main/res/xml/: network_security_config.xml
android/app/src/profile/: AndroidManifest.xml
ios/Classes/: def.h  dna.h
lib/: Chart.dart  History.dart  Home.dart  Home_NotFound.dart  Notfound_bottom.dart  PlayInfo.dart  Search_Result.dart  Settings.dart  Terms.dart  Watch_ReSearch.dart  Watch_Search_Result.dart  Watch_Swipe_Controller.dart  firebase_options.dart  main.dart  vmidc.dart
